logging around read/write servers

--- a/k8s/deployment.yaml
+++ b/k8s/deployment.yaml
@@ -13,13 +13,15 @@ spec:
     spec:
       containers:
       - name: python-k8s-example
-        image: "python-k8s-example:latest"
-        imagePullPolicy: "Never"
+        image: "markhneedham/python-k8s-example:v0.0.3"
+        imagePullPolicy: "Always"
         env:
           - name: NEO4J_HOST
             value: neo4j.default.svc.cluster.local
           - name: NEO4J_PASSWORD
             value: neo
+          - name: PYTHONUNBUFFERED
+            value: "0"
         ports:
         - containerPort: 8080
         securityContext:
